<resources>
    <string name="app_name">Iceland Events</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign In</string>
    <string name="get_event_btn">Event</string>
    <string name="sign_in">Sign In</string>
    <string name="skip_btn">Skip</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password_btn">Forgot password</string>
    <string name="enter_email_editText">Enter your email</string>
    <string name="resetPasswordBtn">Reset password</string>
    <string name="text_view">TextView!!!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="back_btn">Back</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_my_event">MyEventActivity</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_prufa">prufaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_prufa2">prufa2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_up_enter_name_textEdit">Enter your name</string>
    <string name="sign_up_choose_username_textEdit">Choose username</string>
    <string name="sign_up_choose_password_textEdit">Choose password</string>
    <string name="sign_up_confirm_password_textEdit">Confirm password</string>
</resources>
