<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hbv2.icelandevents.Activity.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sign_up_enter_name_textEdit"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/signUpName_editText"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backSignUpBtnId"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="backSignUpBtnOnClick"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/signUpBtnId"
        android:layout_alignEnd="@+id/signUpConfirmPassword_editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_email_editText"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/signUpEmail_editText"
        android:layout_below="@+id/signUpName_editText"
        android:layout_alignStart="@+id/signUpName_editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sign_up_choose_username_textEdit"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/signUpUsername_editText"
        android:layout_below="@+id/signUpEmail_editText"
        android:layout_alignStart="@+id/signUpEmail_editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/sign_up_choose_password_textEdit"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/signUpPassword_editText"
        android:layout_below="@+id/signUpUsername_editText"
        android:layout_alignStart="@+id/signUpUsername_editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/sign_up_confirm_password_textEdit"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/signUpConfirmPassword_editText"
        android:layout_below="@+id/signUpPassword_editText"
        android:layout_alignStart="@+id/signUpPassword_editText" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpBtnId"
        android:onClick="signUpBtnOnClick"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:layout_above="@+id/backSignUpBtnId"
        android:layout_alignStart="@+id/signUpConfirmPassword_editText"
        android:layout_alignEnd="@+id/signUpConfirmPassword_editText" />

</RelativeLayout>
