<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hbv2.icelandevents.Activity.SignInActivity"
    tools:showIn="@layout/activity_sign_in">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/errorMsgTextViewId"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>



            <EditText
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/usernameEditText"
                android:hint="Username"
                android:textAlignment="center"
                android:layout_below="@+id/errorMsgTextViewId"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordEditText"
                android:hint="Password"
                android:textAlignment="center"
                android:layout_below="@+id/usernameEditText"
                android:layout_alignStart="@+id/usernameEditText"
                android:layout_centerHorizontal="true" />


            <Button
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signInBtnActId"
                android:textSize="18sp"
                android:onClick="signInOnClick"
                android:layout_marginTop="47dp"
                android:layout_below="@+id/passwordEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <Button
                android:text="@string/skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skipBtnId"
                android:onClick="skipOnClick"
                android:layout_below="@+id/signInBtnActId"
                android:layout_alignStart="@+id/signInBtnActId"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"/>


            <Button
                android:text="@string/forgot_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswBtnId"
                android:onClick="forgotPasswordBtn"
                android:layout_below="@+id/skipBtnId"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"/>



        </RelativeLayout>
    </ScrollView>
</RelativeLayout>